crates/edifact-rs-derive/tests/ui/fail_unknown_struct_attr_key.stderr
error: unknown struct-level `edifact` key; expected `segment`, `qualifier`, or `qualifier_from`
  --> tests/ui/fail_unknown_struct_attr_key.rs:15:28
   |
15 | #[edifact(segment = "BGM", unknown = "X")]
   |                            ^^^^^^^
